--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Commit changes
       run: |
-        git config --local user.name "xinrui.an"
-        git config --local user.email "xinrui.an@lkcoffee.com"
-        git add README.md
-        git commit -m "chore: auto update README.md with latest changes" || exit 0
+        git config --global user.email hostsBot@fake.com
+        git config --global user.name hostsBot
+        git add .
+        git commit -m "chore: auto update hosts with latest changes" || exit 0
         git push 
